--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/Background\ 2.jpg');
+    background-image: url('/assets/Background\ 2.jpg');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
@@ -23,6 +23,7 @@ body::before {
 form {
     background-color: rgba(255, 255, 255, 0.9); 
     width: 60%; 
+    margin: 50px auto;
     padding: 40px; 
     border-radius: 20px; 
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2); 
